TST-27 Fixed cart icon alignment in header-top

--- a/assets/scss/custom/layout/_header.scss
+++ b/assets/scss/custom/layout/_header.scss
@@ -52,8 +52,12 @@
                             }
                             .navUser {
                                 padding:0;
-                                .navUser-action {
-                                    padding:0 1rem;
+                                .navUser-section {
+                                    align-items:center;
+                                    display:flex;
+                                    .navUser-action {
+                                        padding:0 1rem;
+                                    }
                                 }
                             }
                         }
